proper display in connection profile

--- a/html/pfappserver/root/config/profile/tab-content.tt
+++ b/html/pfappserver/root/config/profile/tab-content.tt
@@ -112,10 +112,10 @@
             </div>
           </div>
           <div class="control-group">
-            <label class="control-label" for="device_registration">[% l('Device registration') %]</label>
+            <label class="control-label" for="devices_registration">[% l('Device registration') %]</label>
             <div class="controls">
-              [% form.field('device_registration').render | none %]
-              <div id="deviceRegistrationEmpty" class="unwell unwell-horizontal[% ' hidden' IF form.field('devices_registration').index > 1 %]">
+              [% form.field('devices_registration').render | none %]
+              <div id="devices_registrationEmpty" class="unwell unwell-horizontal[% ' hidden' IF form.field('devices_registration').index > 1 %]">
                 <p>
                   <i class="icon-cog icon-large"></i>
                   [%- IF form.isa('pfappserver::Form::Portal::Profile::Default') -%]
