Reset node search form

--- a/html/pfappserver/root/admin/nodes.tt
+++ b/html/pfappserver/root/admin/nodes.tt
@@ -351,6 +351,7 @@
                         </td>
                         <td>
                           <div class="btn-group pull-right">
+                            <button type="reset" class="btn btn-primary"><i class="icon-refresh icon-white"></i> [% l('Reset Search') %]</button>
                             <button type="submit" class="btn btn-primary"><i class="icon-search icon-white"></i> [% l('Search') %]</button>
                             <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown"><span class="icon-chevron-up"></span></a>
                             <ul class="dropdown-menu" role="menu">
@@ -464,6 +465,7 @@
                         </td>
                         <td>
                           <div class="btn-group pull-right">
+                            <button type="reset" class="btn btn-primary"><i class="icon-refresh icon-white"></i> [% l('Reset Search') %]</button>
                             <button class="btn btn-primary"><i class="icon-search icon-white"></i> [% l('Search') %]</button>
                             <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown"><span class="icon-chevron-up"></span></a>
                             <ul class="dropdown-menu">
