--- a/html/pfappserver/root/dhcpoption82/index.tt
+++ b/html/pfappserver/root/dhcpoption82/index.tt
@@ -82,6 +82,7 @@
                   </td>
                   <td>
                     <div class="btn-group pull-right">
+                      <button id="dhcpoption82_reset" type="button" class="btn btn-primary"><i class="icon-refresh icon-white"></i> [% l('Reset Search') %]</button>
                       <button class="btn btn-primary"><i class="icon-search icon-white"></i> [% l('Search') %]</button>
                       <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></a>
                       <ul class="dropdown-menu">
