--- a/html/pfappserver/root/admin/status.tt
+++ b/html/pfappserver/root/admin/status.tt
@@ -24,7 +24,9 @@
               <li><a href="#service/cluster_status">[% l('Cluster state') %]</a></li>
               [%- END %]
               [%- IF can_access("SERVICES") %]
-              <li><a href="#pfqueue">[% l('Queue') %]</a></li>
+              <li class="nav-header">[% l('Queue') %]</li>
+              <li><a href="#pfqueue">[% l('Local Queue') %]</a></li>
+              <li><a href="#pfqueue/cluster">[% l('Cluster Queue') %]</a></li>
               [%- END %]
               <!-- <li class="nav-header">[% l('System') %]</li>
               <li><a href="#">[% l('Server') %]</a></li>
