--- a/html/pfappserver/root/violation/list.tt
+++ b/html/pfappserver/root/violation/list.tt
@@ -26,6 +26,7 @@
       <table class="table">
         <thead>
           <tr>
+            <th></th>
             <th>[% l('Id') %]</th>
             <th>[% l('Description') %]</th>
             <th class="hidden-phone">[% l('Actions') %]</th>
@@ -36,6 +37,11 @@
         <tbody>
           [% FOREACH violation IN items %]
           <tr[% IF violation.enabled == 'N' %] class="muted"[% END %]>
+            <td>
+                [% IF violation.id != 'defaults' %]
+                <div class="switch switch-mini"><input type="checkbox" id="[% violation.id | html %]" name="[% violation.id | html %]"[% IF violation.enabled != 'N' %] checked="checked"[% END %]/></div>
+                [% END %]
+            </td>
             <td><a href="[% c.uri_for(c.controller('Violation').action_for('view'), [ violation.id ]) %]#modalViolation">[% violation.id | html %]</a></td>
             <td>[% violation.desc | html %]</td>
             <td class="hidden-phone">[% FOREACH action IN violation.actions %]
