--- a/html/captive-portal/templates/violations/redirect.html
+++ b/html/captive-portal/templates/violations/redirect.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=[% redirect_url %]" />
+<meta http-equiv="refresh" content="0; url=[% IF redirect_url %][% redirect_url %][% END %]" />
