--- a/html/pfappserver/root/violation/list.tt
+++ b/html/pfappserver/root/violation/list.tt
@@ -9,7 +9,7 @@
           <h3><i>[% l('Delete Violation') %]</i> <span></span></h3>
         </div>
         <div class="modal-body">
-          <p>[% l('Deleting this violation will close all triggered violations associated with this violation.') %]</p>
+          <p>[% l('Deleting this violation will remove all triggered violations associated with this violation.') %]</p>
           <p>[% l('Do you wish to continue?') %]</p>
         </div>
         <div class="modal-footer">
