--- a/html/pfappserver/root/auditing/radiuslog/index.tt
+++ b/html/pfappserver/root/auditing/radiuslog/index.tt
@@ -41,11 +41,11 @@
                       <input type="text" class="input-small input-date" id="end_date" name="end.date" value="[% end.date %]" data-date-format="yyyy-mm-dd" date-datestart="[% end_date %]" />
                       <input type="text" name="end.time" id="end_time" value="[% end.time %]" class="timepicker-default input-small" placeholder="HH:MM"/>
                       [% l('Last') %]
-                      <a href="#last30mins">[% l('30 minutes') %]</a> |
-                      <a href="#last1hour">  [% l('1 hour') %]</a> |
-                      <a href="#last6hours"> [% l('6 hours') %]</a> |
-                      <a href="#last12hours">[% l('12 hours') %]</a> |
-                      <a href="#last24hours">[% l('24 hours') %]</a>
+                      <a href="[% c.uri_for(c.controller('Admin').action_for('time_offset'),'30m') %]">[% l('30 minutes') %]</a> |
+                      <a href="[% c.uri_for(c.controller('Admin').action_for('time_offset'),'1h') %]">[% l('1 hour') %]</a> |
+                      <a href="[% c.uri_for(c.controller('Admin').action_for('time_offset'),'6h') %]">[% l('6 hours') %]</a> |
+                      <a href="[% c.uri_for(c.controller('Admin').action_for('time_offset'),'12h') %]">[% l('12 hours') %]</a> |
+                      <a href="[% c.uri_for(c.controller('Admin').action_for('time_offset'),'24h') %]">[% l('24 hours') %]</a> 
                     </div>
                   </td>
                 </tr>
