--- a/html/common/scss/_base.input.scss
+++ b/html/common/scss/_base.input.scss
@@ -7,3 +7,11 @@ html input[type="button"],
 button {
   cursor: pointer;
 }
+
+/// No little up down arrows to number inputs
+/// https://css-tricks.com/snippets/css/turn-off-number-input-spinners/
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
