Allow the read and write timeouts to be configured

--- a/html/pfappserver/root/config/source/type/LDAP.tt
+++ b/html/pfappserver/root/config/source/type/LDAP.tt
@@ -5,6 +5,8 @@
   </div>
 </div>
 [% form.field('connection_timeout').render | none %]
+[% form.field('write_timeout').render | none %]
+[% form.field('read_timeout').render | none %]
 [% form.field('basedn').render | none %]
 [% form.field('scope').render | none %]
 [% form.field('usernameattribute').render | none %]
