Move CSV importation fields into their own form
Fixes #2617

--- a/html/pfappserver/root/config/switch/index.tt
+++ b/html/pfappserver/root/config/switch/index.tt
@@ -10,8 +10,8 @@
           </div>
         
           <div class="modal-body">
-            [% current_form_instance.field('importcsv').render | none %]
-            [% current_form_instance.field('delimiter').render | none %]
+            [% import_form.field('importcsv').render | none %]
+            [% import_form.field('delimiter').render | none %]
           </div><!--modal-body-->
         
           <div class="modal-footer">
