--- a/html/common/scss/styles.scss
+++ b/html/common/scss/styles.scss
@@ -82,6 +82,7 @@ $inuit-enable-table--compact:             true;
 @import "components.frame";
 @import "components.iconic";
 @import "components.input";
+@import "components.timerbar";
 
 // TRUMPS:
 @import "node_modules/inuit-clearfix/trumps.clearfix";
