--- a/html/captive-portal/templates/billing/confirm_Stripe.html
+++ b/html/captive-portal/templates/billing/confirm_Stripe.html
@@ -1,7 +1,7 @@
 [% INCLUDE 'billing/tier.html' %]
 
 <form action="/billing/[% billing.id %]/verify" method="POST" id="payment-form">
-  <div class="payment-errors media media--error u-p u-m" style="display: none">
+  <div class="payment-errors media media--error u-p u-m hide">
     <div class="media__img">[% flashIcon(level='error') %]</div>
     <p class="media__body"></p>
   </div>
@@ -35,7 +35,7 @@
         <button type="submit" name="submit-btn" class="btn btn--full">
           <div class="flag">
             <div class="flag__img">[% svgIcon(id='stripe-icon',size='small') %]</div>
-            <p class="flag__body">[% i18n ("Continue") %]</p>
+            <p class="flag__body">[% i18n("Continue") %]</p>
           </div>
         </button>
       </div>
@@ -45,50 +45,9 @@
 </form>
 
 <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
-
-<script type="text/javascript">
-  $(function() {
-
-    function stripeResponseHandler(status, response) {
-      var $form = $('#payment-form');
-      
-      if (response.error) {
-        // Show the errors on the form
-        $form.find('.payment-errors p').text(response.error.message);
-        $form.find('.payment-errors').show();
-      }
-      else {
-        // response contains id and card, which contains additional card details
-        var token = response.id;
-        // Insert the token into the form so it gets submitted to the server
-        $form.append($('<input type="hidden" name="stripeToken" />').val(token));
-        // and submit
-        $form.get(0).submit();
-      }
-    }
-
-    if (typeof Stripe !== 'undefined' ) {
-      // This identifies your website in the createToken call below
-      Stripe.setPublishableKey('[% billing.publishable_key %]');
-
-      $('#payment-form').submit(function(event) {
-        var $form = $(this);
-
-        // Disable the submit button to prevent repeated clicks
-        $form.find('button').prop('disabled', true);
-        
-        Stripe.card.createToken($form, stripeResponseHandler);
-
-        // Prevent the form from submitting with the default action
-        return false;
-      });
-    }
-    else {
-      var $form = $('#payment-form');
-      $form.find('.payment-errors p').text('Unable to proceed with payment please contact your service provider');
-      $form.find('.payment-errors').show();
-    }
-
-  });
+<script id="variables" type="text/json">
+{
+  "publishable_key": "[% billing.publishable_key %]"
+}
 </script>
-
+<script type="text/javascript" src="/content/billing/stripe.js"></script>
