--- a/html/captive-portal/templates/provisioner/sepm.html
+++ b/html/captive-portal/templates/provisioner/sepm.html
@@ -20,18 +20,7 @@
         </div>
       </a>
 
-      <script type="text/javascript">
-        // check if windows 64 bits
-        // swap the primary and alternate
-        if (navigator.userAgent.indexOf("WOW64") != -1 ||
-            navigator.userAgent.indexOf("Win64") != -1 ) {
-          var new_primary = $('alternate_download').getAttribute("href");
-          if (new_primary != "") {
-            $('alternate_download').setAttribute('href', $('primary_download').getAttribute('href'));
-            $('primary_download').setAttribute('href', new_primary);
-          }
-        }
-      </script>
+      <script type="text/javascript" src="/content/provisioner/sepm.js"></script>
       [% END %]
 
       <a href="/captive-portal" class="btn btn--full btn--light u-mt">
