--- a/html/captive-portal/templates/release.html
+++ b/html/captive-portal/templates/release.html
@@ -1,38 +1,30 @@
-<script type="text/javascript">
-var waitTime=[% timer %];
-var action = function() {
-  hidebar();
-  $('#detectionNotice').hide();
-  $('#detectionError').show();
-}; 
-
-var txt_ie = "[% i18n("Some versions of Internet Explorer may take a while before redirection occur.") | html %]";
-var txt_web_notification = "[% i18n("Network access has been granted") %]"
-
-// once the page is loaded
-$(document).ready(function() {
-  setTimeout(function() {
-    detectNetworkAccess([% retry_delay %], "[% destination_url %]", "[% external_ip %]", "[% image_path %]");
-  }, [% initial_delay %] * 1000);
-
-  // require access to web notifications now so it's ready when the access is activated
-  initWebNotifications();
-});
+<script id="variables" type="text/json">
+{
+  "txt_web_notification": "[% i18n("Network access has been granted") %]",
+  "destination_url":      "[% destination_url %]",
+  "external_ip":          "[% external_ip %]",
+  "image_path":           "[% image_path %]",
+  "waitTime":              [% timer %],
+  "initial_delay":         [% initial_delay %],
+  "retry_delay":           [% retry_delay %]
+}
 </script>
+<script type="text/javascript" src="/content/release.js"></script>
+<script type="text/javascript" src="/content/timerbar.js"></script>
 
 <div id="detectionNotice" class="media media--notice u-p u-mb">
   <div class="media__img">[% flashIcon(level='notice') %]</div>
   <p class="media__body">[% i18n("Your network access is currently being enabled. Once network connectivity is established you will be automatically redirected.") %]</p>
 </div>
 
-<div id="detectionError" class="media media--error u-p u-mb" style="display: none">
+<div id="detectionError" class="media media--error u-p u-mb hide">
   <div class="media__img">[% flashIcon(level='error') %]</div>
   <p class="media__body">[% i18n("Unable to detect network connectivity. Try restarting your web browser or opening a new tab to see if your access has been succesfully enabled.") %]</p>
 </div>
 
 <div class="layout layout--center layout--auto">
   <div class="layout__item">
-    <script type="text/javascript" src="/content/timerbar.js"></script>
+    <div class="timerbar"></div>
   </div>
 </div>
 
@@ -44,5 +36,4 @@ $(document).ready(function() {
 </noscript>
 
 [%# DO NOT REMOVE! REQUIRED FOR NETWORK ACCESS DETECTION %]
-<div id="internet-detection" style="display: none;"><img id="netdetect"/></div>
-
+<div id="internet-detection" class="hide"><img id="netdetect"/></div>
