--- a/html/captive-portal/templates/scan-in-progress.html
+++ b/html/captive-portal/templates/scan-in-progress.html
@@ -1,29 +1,46 @@
-[% title = i18n("scan: scan in progress") %]
-[% INCLUDE header.html %]
-<script type="text/javascript">
-var waitTime=[% timer %];
-var action = function() {
-  hidebar();
-  $('#toReplace').innerHTML = "[% i18n("Unable to detect network connectivity. Try restarting your web browser or opening a new tab to see if your access has been succesfully enabled.") | html %]";
-};
-
-var txt_ie = "[% i18n("Some versions of Internet Explorer may take a while before redirection occur.") | html %]";
-
-// once the page is loaded
-$(document).ready(function() {
-  setTimeout(function() {
-    detectNetworkAccess([% refresh_timer %], "[% destination_url %]", "[% external_ip %]", "[% image_path %]");
-  }, [% refresh_timer %] * 1000);
-});
+<script id="variables" type="text/json">
+{
+  "txt_web_notification": "[% i18n("Network access has been granted") %]",
+  "destination_url":      "[% destination_url %]",
+  "external_ip":          "[% external_ip %]",
+  "image_path":           "[% image_path %]",
+  "waitTime":              [% timer %],
+  "initial_delay":         [% initial_delay %],
+  "retry_delay":           [% retry_delay %]
+}
 </script>
+<script type="text/javascript" src="/content/release.js"></script>
+<script type="text/javascript" src="/content/timerbar.js"></script>
 
-        <div id='about'>
-          <img src="/content/images/lock.png" alt="You are not authorized" />
-          <h1>[% title %]</h1>
-          <p>[% i18n(txt_message) %]</p>
-        </div>
+<div class="card">
+
+  <div class="layout--center">
+    <h3>[% i18n("scan: scan in progress") %]</h3>
+  </div>
+
+  <div id="detectionNotice" class="text-center">
+    <p>[% i18n(txt_message) %]</p>
+  </div>
+
+  <div id="detectionError" class="media media--error u-p u-mb hide">
+    <div class="media__img">[% flashIcon(level='error') %]</div>
+    <p class="media__body">[% i18n("Unable to detect network connectivity. Try restarting your web browser or opening a new tab to see if your access has been succesfully enabled.") %]</p>
+  </div>
+
+  <div class="layout layout--center layout--auto">
+    <div class="layout__item">
+      <div class="timerbar"></div>
+    </div>
+  </div>
+
+</div>
+
+<noscript>
+  <div class="media media--error u-p u-mb">
+    <div class="media__img">[% flashIcon(level='error') %]</div>
+    <p class="media__body">[% i18n("If you have scripting turned off, you will not be automatically redirected. Please enable scripting or open a new browser window from time to time to see if your access was enabled.") %]</p>
+  </div>
+</noscript>
 
 [%# DO NOT REMOVE! REQUIRED FOR NETWORK ACCESS DETECTION %]
-<div id="internet-detection" style="display: none;"><img id="netdetect"/></div>
-
-[% INCLUDE footer.html %]
+<div id="internet-detection" class="hide"><img id="netdetect"/></div>
