(portal) Fix static URLs in templates

--- a/html/captive-portal/templates/emails/emails-billing_confirmation.html
+++ b/html/captive-portal/templates/emails/emails-billing_confirmation.html
@@ -22,8 +22,8 @@
                     [% tier_name %]: [% tier_description %]</br>
                     [% i18n("Cost") %]: $[% tier_price %]</br>
                     [% i18n("Transaction ID") %]: [% transaction_id %]</p>
-                    <p>[% i18n("To extend your network access, please visit") %] <a href="https://[% hostname %].[% domain %][% URL_BILLING %]">[% i18n("Extend access duration") %]</a></p>
-                    <p>[% i18n("To view your current network status, please visit") %] <a href="https://[% hostname %].[% domain %][% URL_STATUS %]">[% i18n("Status") %]</a></p>
+                    <p>[% i18n("To extend your network access, please visit") %] <a href="https://[% hostname %].[% domain %]/billing">[% i18n("Extend access duration") %]</a></p>
+                    <p>[% i18n("To view your current network status, please visit") %] <a href="https://[% hostname %].[% domain %]/status">[% i18n("Status") %]</a></p>
                   </td>
                 </tr>
               </table>
