--- a/html/captive-portal/templates/violations/time_expiration.html
+++ b/html/captive-portal/templates/violations/time_expiration.html
@@ -4,5 +4,5 @@
 
 <div class="media media--error u-p u-mb">
   <div class="media__img">[% flashIcon(level='error') %]</div>
-  <p class="media__body">You need to <a href="[% URL_BILLING %]">buy more time</a> if you want a network access.</p>
+  <p class="media__body">You need to <a href="/billing">buy more time</a> if you want a network access.</p>
 </div>
