--- a/html/pfappserver/root/user/print.tt
+++ b/html/pfappserver/root/user/print.tt
@@ -1,69 +1,4 @@
-<style type="text/css">
-h3, .aup {
-  display: none;
-}
-
-.print-with-aup {
-  float:right;
-  position:relative;
-  right:20px;
-  top:5px;
-  display:inline-block;
-}
-</style>
-
-<style type="text/css" media="print">
-.row-fluid .offset2:first-child {
-  margin-left: 0;
-}
-.row-fluid .span8 {
-  width: auto;
-}
-hr {
-  border: 0;
-  border-bottom: 1px dashed #000;
-}
-h1, #navbar, .alert, .print-menu {
-  display: none;
-}
-h3, .aup {
-  display: block;
-}
-dd.aup {
-  font-size: 9pt;
-  line-height: 9pt;
-}
-.dl-horizontal dt {
-  float: none;
-  text-align: left;
-  width: auto;
-}
-.dl-horizontal dd {
-  margin-left: 0;
-}
-.page-break {
-  display:block;
-  page-break-before:always;
-}
-.ignore {
-  display:none !important;
-  page-break-before:auto !important;
-}
-.spacer {
-  display:block;
-  height:0.5in;
-}
-@page {
-  margin:0 !important;
-}
-body {
-  margin-left: 1.5in;
-  margin-right: 1.5in;
-}
-.title-underline {
-  border-bottom:3px dotted black;
-}
-</style>
+<style type="text/css" media="print" src="static/css/user_print.css"></script>
 <div class="container-fluid">
   <div class="row-fluid">
     <div class="span8 offset2">
@@ -110,20 +45,5 @@ body {
 </div><!--/.fluid-container-->
 
 <script type="text/javascript" src="/static/app/jquery.js"></script>
-<script>
-  $('[name="with-aup"]').change(function(){
-    if($(this).prop('checked')) {
-      $('.page-break').removeClass('ignore');
-      $('dd.aup').removeClass('ignore');
-    }
-    else {
-      $('.page-break').each(function(){
-        if(parseInt($(this).data('index')) % 4 != 3) {
-          $(this).addClass('ignore');
-          $('dd.aup').addClass('ignore');
-        }
-      });
-    }
-  });
+<script type="text/javascript" src="/static/admin/user-print.js"></script>
 
-</script>
