--- a/html/pfappserver/root/violation/view.tt
+++ b/html/pfappserver/root/violation/view.tt
@@ -1,6 +1,4 @@
-<script class="event_triggers" type="text/json">
-  [% json_event_triggers | none %]
-</script>
+<script class="event_triggers" type="text/json" src="[% c.uri_for(c.controller.action_for('event_triggers')) %]"></script>
 
 [% UNLESS action_uri%]
 [% SET action_uri = c.req.uri %]
