--- a/html/pfappserver/root/user/print.tt
+++ b/html/pfappserver/root/user/print.tt
@@ -1,4 +1,4 @@
-<style type="text/css" media="print" src="static/css/user_print.css"></script>
+<script type="text/css" media="print" src="static/css/user_print.css"></script>
 <div class="container-fluid">
   <div class="row-fluid">
     <div class="span8 offset2">
