Revert "Move event_triggers to an action"
This reverts commit f2c089d4fb33910e9df788082966f5778cb63d50.

--- a/html/pfappserver/root/violation/view.tt
+++ b/html/pfappserver/root/violation/view.tt
@@ -1,4 +1,6 @@
-<script class="event_triggers" type="text/json" src="[% c.uri_for(c.controller.action_for('event_triggers')) %]"></script>
+<script class="event_triggers" type="text/json">
+  [% json_event_triggers | none %]
+</script>
 
 [% UNLESS action_uri%]
 [% SET action_uri = c.req.uri %]
