--- a/html/captive-portal/templates/enabler.html
+++ b/html/captive-portal/templates/enabler.html
@@ -7,7 +7,7 @@
         <button type="submit" name="submit" class="btn btn--full">
           <div class="flag flag--light">
             <div class="flag__img">[% svgIcon(id='ic_done_black_24px',size='small') %]</div>
-            <p class="flag__body">[% enable_text %]</p>
+            <p class="flag__body">[% i18n(enable_text) %]</p>
           </div>
         </button>
       </div>
