(web admin) Fix display of switch groups

--- a/html/pfappserver/root/static/scss/_sidenav.scss
+++ b/html/pfappserver/root/static/scss/_sidenav.scss
@@ -72,7 +72,7 @@ $sidenavSubsectionColor:        darken($navbarInverseText, 30%);
       background: transparent !important;
     }
     // The line
-    &:not(:last-child)::before {
+    &:not(:last-child):not(.sidenav-subsection--last)::before {
       content: '';
       position: absolute;
       background: $sidenavSubsectionColor;
