--- a/html/pfappserver/root/static/scss/_forms.scss
+++ b/html/pfappserver/root/static/scss/_forms.scss
@@ -9,3 +9,11 @@ form {
   position: relative;
   height: 450px;
 }
+
+.form-horizontal .accordion-group .control-label {
+  width: 80px;
+}
+
+.form-horizontal .accordion-group .controls {
+  margin-left: 100px;
+}
