Use the fully qualified name for find columns
Fixes #2722

--- a/addons/dev-helpers/templates/pf-dal.pm.tt
+++ b/addons/dev-helpers/templates/pf-dal.pm.tt
@@ -12,6 +12,7 @@ our @INSERTABLE_FIELDS;
 our @PRIMARY_KEYS;
 our %DEFAULTS;
 our %FIELDS_META;
+our @COLUMN_NAMES;
 
 BEGIN {
     @FIELD_NAMES = qw(
@@ -59,6 +60,13 @@ BEGIN {
         [% col.COLUMN_NAME %]
 [% END -%]
     );
+
+    @COLUMN_NAMES = qw(
+[% FOREACH col IN cols -%]
+        [% TABLE_NAME %].[% col.COLUMN_NAME %]
+[% END -%]
+    );
+
 }
 
 use Class::XSAccessor {
@@ -108,6 +116,16 @@ our $FIND_SQL = do {
     my $where = join(", ", map { "$_ = ?" } @PRIMARY_KEYS);
     "SELECT * FROM `[% TABLE_NAME %]` WHERE $where;";
 };
+
+=head2 find_columns
+
+find_columns
+
+=cut
+
+sub find_columns {
+    return [@COLUMN_NAMES];
+}
 
 =head2 _find_one_sql
 
