Have the user email message templated through template toolkit
fixes #2765

--- a/html/captive-portal/templates/emails/emails-violation-triggered.html
+++ b/html/captive-portal/templates/emails/emails-violation-triggered.html
@@ -27,7 +27,7 @@
                       <li>[% i18n("Hostname") %] : [% hostname %]</li>
                     </ul>
 
-                    [% additionnal_message %]
+                    [% additionnal_message | eval %]
 
                   </td>
                 </tr>
