make status page cancel button a return button instead
fixes #2766

--- a/html/captive-portal/templates/status/menu.html
+++ b/html/captive-portal/templates/status/menu.html
@@ -3,7 +3,7 @@
     <a href="/status" class="btn btn--full btn--light">
       <div class="flag">
         <div class="flag__img">[% svgIcon(id='ic_cancel_black_24px',size='small') %]</div>
-        <p class="flag__body">[% i18n("Cancel") %]</p>
+        <p class="flag__body">[% i18n("Return to device list") %]</p>
       </div>
     </a>
     <a href="/status/logout" class="btn btn--full btn--light">
