--- a/html/captive-portal/templates/emails/emails-violation-triggered.html
+++ b/html/captive-portal/templates/emails/emails-violation-triggered.html
@@ -20,7 +20,7 @@
                     <p>[% i18n("Hello") %],</p>
                     <p>[% i18n("You have been detected doing malicious activity on the network.") %]</p>
                     <p>[% i18n_format("Violation %s was detected on your device.", description) %]</p>
-                    <p>[% i18n("Here are the informations of the infringing device") %]</p>
+                    <p>[% i18n("Here is the information of the infringing device") %]</p>
                     <ul>
                       <li>[% i18n("MAC Address") %] : [% mac %]</li>
                       <li>[% i18n("OS") %] : [% os %]</li>
