--- a/html/pfappserver/root/config/profile/tab-content.tt
+++ b/html/pfappserver/root/config/profile/tab-content.tt
@@ -21,6 +21,15 @@
           <option value="[% node_role.name %]"> [% node_role.name %] </option>
        [% END %]
      </select>
+     [% IF ssids.size %]
+     <select name="ssid_filter_match" id="ssid_filter_match" data-required="require" placeholder="[% l('Enter SSID') %]">
+        <option value="" disabled selected style="display:none;">--- [% l('Choose SSID') %] ---</option> [% #initial placeholder, removed after 1st selection %]
+        [% FOREACH ssid IN ssids %]
+            <option value="[% ssid.ssid %]">[% ssid.ssid %]</option>
+        [% END %]
+            <option value="">--- [% l('Enter new SSID') %] ---</option>
+     </select>
+     [% END %]
   </div>
           [% IF item && item.id.defined %]
             [%  CALL form.field('id').set_element_attr('readonly','readonly') %]
