Add access_duration on Admin > Compliance > Violations with 'Register node' (autoreg)
Add unregdate on node registration to support Registered node access duration.

--- a/html/pfappserver/root/violation/view.tt
+++ b/html/pfappserver/root/violation/view.tt
@@ -32,6 +32,7 @@
         [% form.field('target_category').render | none %]
         [% form.field('external_command').render | none %]
         [% form.field('user_mail_message').render | none %]
+        [% form.field('access_duration').render | none %]
         [% form.field('priority').render | none %]
         [% form.field('whitelisted_roles').render | none %]
       </div><!-- tab-pane -->
