--- a/html/pfappserver/root/admin/reports.tt
+++ b/html/pfappserver/root/admin/reports.tt
@@ -31,6 +31,13 @@
               <li class="nav-header">[% l('ACCOUNTING') %]</li>
               [% list_entry('graph/nodebandwidth', 'Top 25 Bandwidth Consumers') | none %]
               [% list_entry('graph/osclassbandwidth', 'Bandwidth per Operating System') | none %]
+              [% list_entry('graph/topauthenticationfailures_by_mac', 'Top Auth Failures by MAC') | none %]
+              [% list_entry('graph/topauthenticationfailures_by_ssid', 'Top Auth Failures by SSID') | none %]
+              [% list_entry('graph/topauthenticationfailures_by_username', 'Top Auth Failures by Username') | none %]
+              [% list_entry('graph/topauthenticationsuccesses_by_mac', 'Top Auth Successes by MAC') | none %]
+              [% list_entry('graph/topauthenticationsuccesses_by_ssid', 'Top Auth Successes by SSID') | none %]
+              [% list_entry('graph/topauthenticationsuccesses_by_username', 'Top Auth Successes by Username') | none %]
+              [% list_entry('graph/topauthenticationsuccesses_by_computername', 'Top Auth Successes by Computername') | none %]
               <li class="nav-header">[% l('Other reports') %]</li>
               [% FOREACH report_id IN builtin_report_ids %]
               [% list_entry('dynamicreport/' _ report_id, dynamic_reports.$report_id.description) | none %]
