--- a/html/pfappserver/root/admin/nodes.tt
+++ b/html/pfappserver/root/admin/nodes.tt
@@ -6,13 +6,12 @@
     <option value="bypass_vlan">[% l('Bypass VLAN') %]</option>
     <option value="computername">[% l('Computer Name') %]</option>
     <option value="connection_type">[% l('Connection Type') %]</option>
+    <option value="device_class">[% l('Device Class') %]</option>
     <option value="device_type">[% l('Device Type') %]</option>
     <option value="last_ip">[% l('Node IP') %]</option>
     <option value="category">[% l('Node Role') %]</option>
     <option value="notes">[% l('Notes') %]</option>
     <option value="online">[% l('Online Status') %]</option>
-    <option value="device_class">[% l('Device class') %]</option>
-    <option value="device_type">[% l('Device type') %]</option>
     <option value="person_name">[% l('Person Name') %]</option>
     <option value="status">[% l('Status') %]</option>
     <option value="switch_id">[% l('Source Switch Identifier') %]</option>
@@ -189,7 +188,11 @@
                   </li>
                   <li id="collapseSwitchGroupDefault" class="collapse">
                     <ul>[% FOREACH switch IN switches %]
-                      <li class="sidenav-subsection-extend"><a href="#" data-toggle="pf-search-form" data-parent="#collapseSwitchGroupDefault" data-target="advanced">[% switch.id %]</a>
+                      <li class="sidenav-subsection-extend">
+                        <a href="#" data-toggle="pf-search-form" data-parent="#collapseSwitchGroupDefault" data-target="advanced">
+                          <p class="sidenav-item">[% switch.id %]</p>
+                          [% IF switch.description %]<p class="sidenav-description">[% switch.description %]</p>[% END %]
+                        </a>
                         <form>
                           <input type="hidden" name="searches.0.name" value="switch_id"/>
                           <input type="hidden" name="searches.0.op" value="is"/>
