--- a/html/captive-portal/templates/billing/confirm_AuthorizeNet.html
+++ b/html/captive-portal/templates/billing/confirm_AuthorizeNet.html
@@ -1,30 +1,128 @@
-[% INCLUDE billing/tier.html %]
+[% INCLUDE 'billing/tier.html' %]
 
-<form method="POST" action="https://test.authorize.net/gateway/transact.dll">
-  <input type="hidden" name="x_fp_hash" value="[% fp_hash %]">
-  <input type="hidden" name="x_fp_sequence" value="[% fp_sequence %]">
-  <input type="hidden" name="x_fp_timestamp" value="[% fp_timestamp %]">
-  <input type="hidden" name="x_version" value="3.1">
-  <input type="hidden" name="x_login" value="[% billing.api_login_id %]">
-  <input type="hidden" name="x_show_form" value="PAYMENT_FORM">
-  <input type="hidden" name="x_method" value="CC">
-  <input type="hidden" name="x_amount" value="[% tier.price %]">
-  <input type="hidden" name="x_test_request" value="Y" >
-  <input type="hidden" name="x_receipt_link_method" value="POST" >
-  <input type="hidden" name="x_receipt_link_text" value="Click here to get access" >
-  <input type="hidden" name="x_receipt_link_url" value="[% billing.verify_url %]" >
-  <!-- Display the payment button. -->
-  <div class="layout layout--center">
+<form>
+  <div class="payment-errors media media--error u-p u-m" style="display: none">
+    <div class="media__img">[% flashIcon(level='error') %]</div>
+    <p class="media__body"></p>
+  </div>
+
+  <div class="layout layout--center u-mt">
     <div class="layout__item u-2/3 u-1/1-palm">
+
+      <div class="input-container">
+        <label for="name">Name on Card</label>
+        [% IF request_fields.defined(firstname) && request_fields.defined(lastname) %]
+        <input id="name" type="text" size="20" />
+        [% ELSE %]
+        <input id="name" type="text" size="20" value="[% request_fields.firstname %] [% request_fields.lastname %]"/>
+        [% END %]
+      </div>
+
+      <div class="input-container">
+        <label for="cardNumberID">Card Number</label>
+        <input type="tel" id="cardNumberID" placeholder="5424000000000015" />
+      </div>
+
+      <div class="input-container">
+        <label>Expiration (MM/YYYY)</label>
+        <input class="u-1/4" type="number" min="1" max="12" placeholder="MM" id="monthID" />
+        /
+        <input class="u-1/2" type="number" placeholder="YYYY" id="yearID" />
+      </div>
+
+      <div class="input-container">
+        <label for="cardCodeID">CVC</label>
+        <input type="text" size="4" placeholder="123" id="cardCodeID" />
+      </div>
+
       <div class="u-mt">
-        <button type="submit" name="submit" class="btn btn--full">
-          <div class="flag flag--light">
+        <button type="button" id="submitButton" onclick="sendPaymentDataToAnet()" name="submit-btn" class="btn btn--full">
+          <div class="flag">
             <div class="flag__img">[% svgIcon(id='ic_credit_card_black_24px',size='small') %]</div>
-            <p class="flag__body">Checkout on Authorize.net</p>
+            <p class="flag__body">[% i18n ("Pay with Authorize.Net") %]</p>
           </div>
         </button>
       </div>
     </div>
   </div>
+
 </form>
 
+<script type="text/javascript" src="[% billing.acceptjs_uri %]" charset="utf-8"></script>
+
+<script type="text/javascript">
+function sendPaymentDataToAnet() {
+    var secureData = {}; authData = {}; cardData = {};
+
+    // Extract the card number, expiration date, and card code.
+    cardData.cardNumber = document.getElementById("cardNumberID").value;
+    cardData.month = document.getElementById("monthID").value;
+    cardData.year = document.getElementById("yearID").value;
+    cardData.cardCode = document.getElementById("cardCodeID").value;
+    secureData.cardData = cardData;
+
+    // The Authorize.Net Client Key is used in place of the traditional Transaction Key. The Transaction Key
+    // is a shared secret and must never be exposed. The Client Key is a public key suitable for use where
+    // someone outside the merchant might see it.
+    authData.clientKey = "[% billing.public_client_key %]";
+    authData.apiLoginID = "[% billing.api_login_id %]";
+    secureData.authData = authData;
+
+    // Pass the card number and expiration date to Accept.js for submission to Authorize.Net.
+    Accept.dispatchData(secureData, responseHandler);
+
+    // Process the response from Authorize.Net to retrieve the two elements of the payment nonce.
+    // If the data looks correct, record the OpaqueData to the console and call the transaction processing function.
+    function responseHandler(response) {
+        if (response.messages.resultCode === "Error") {
+            for (var i = 0; i < response.messages.message.length; i++) {
+                console.log(response.messages.message[i].code + ": " + response.messages.message[i].text);
+            }
+            alert("acceptJS library error!")
+        } else {
+            console.log(response.opaqueData.dataDescriptor);
+            console.log(response.opaqueData.dataValue);
+            processTransaction(response.opaqueData);
+        }
+    }
+}
+</script>
+
+<!-- This is where you would insert whatever code necessary to
+        cause the payment nonce to be posted to your server-side
+        payment processing script or application, along with any
+        non-payment information collected by your form. This
+        example is in straight JavaScript, and creates a new form
+        with hidden fields, then submits that form to post the data to
+        the script. This example assumes you are posting data to a PHP
+        script on your server called "paymentprocessor.php", and that
+        the script expects parameters called "amount", "dataDesc",
+        and "dataValue". Other methods could include using jQuery
+        and AJAX to pass data to the transaction processing script
+        or application, but have the browser remain on this page.
+-->
+<script type="text/javascript">
+function processTransaction(responseData) {
+    //create the form and attach to the document
+    var transactionForm = document.createElement("form");
+    transactionForm.setAttribute("method", "post");
+    transactionForm.setAttribute("action", "/portal_preview/billing/[% billing.id %]/verify");
+    document.body.appendChild(transactionForm);
+
+    //create form "input" elements corresponding to each parameter
+    dataDesc = document.createElement("input")
+    dataDesc.hidden = true;
+    dataDesc.value = responseData.dataDescriptor;
+    dataDesc.name = "dataDesc";
+    transactionForm.appendChild(dataDesc);
+
+    dataValue = document.createElement("input")
+    dataValue.hidden = true;
+    dataValue.value = responseData.dataValue;
+    dataValue.name = "dataValue";
+    transactionForm.appendChild(dataValue);
+
+    //submit the new form
+    transactionForm.submit();
+}
+</script>
