--- a/html/captive-portal/templates/billing/confirm_AuthorizeNet.html
+++ b/html/captive-portal/templates/billing/confirm_AuthorizeNet.html
@@ -50,79 +50,11 @@
 
 <script type="text/javascript" src="[% billing.acceptjs_uri %]" charset="utf-8"></script>
 
-<script type="text/javascript">
-function sendPaymentDataToAnet() {
-    var secureData = {}; authData = {}; cardData = {};
-
-    // Extract the card number, expiration date, and card code.
-    cardData.cardNumber = document.getElementById("cardNumberID").value;
-    cardData.month = document.getElementById("monthID").value;
-    cardData.year = document.getElementById("yearID").value;
-    cardData.cardCode = document.getElementById("cardCodeID").value;
-    secureData.cardData = cardData;
-
-    // The Authorize.Net Client Key is used in place of the traditional Transaction Key. The Transaction Key
-    // is a shared secret and must never be exposed. The Client Key is a public key suitable for use where
-    // someone outside the merchant might see it.
-    authData.clientKey = "[% billing.public_client_key %]";
-    authData.apiLoginID = "[% billing.api_login_id %]";
-    secureData.authData = authData;
-
-    // Pass the card number and expiration date to Accept.js for submission to Authorize.Net.
-    Accept.dispatchData(secureData, responseHandler);
-
-    // Process the response from Authorize.Net to retrieve the two elements of the payment nonce.
-    // If the data looks correct, record the OpaqueData to the console and call the transaction processing function.
-    function responseHandler(response) {
-        if (response.messages.resultCode === "Error") {
-            for (var i = 0; i < response.messages.message.length; i++) {
-                console.log(response.messages.message[i].code + ": " + response.messages.message[i].text);
-            }
-            alert("acceptJS library error!")
-        } else {
-            console.log(response.opaqueData.dataDescriptor);
-            console.log(response.opaqueData.dataValue);
-            processTransaction(response.opaqueData);
-        }
-    }
+<script id="variables" type="text/json">
+{
+  "public_client_key": "[% billing.public_client_key %]"
+  "api_login_id": "[% billing.api_login_id %]"
+  "id": "[% billing.id %]"
 }
 </script>
-
-<!-- This is where you would insert whatever code necessary to
-        cause the payment nonce to be posted to your server-side
-        payment processing script or application, along with any
-        non-payment information collected by your form. This
-        example is in straight JavaScript, and creates a new form
-        with hidden fields, then submits that form to post the data to
-        the script. This example assumes you are posting data to a PHP
-        script on your server called "paymentprocessor.php", and that
-        the script expects parameters called "amount", "dataDesc",
-        and "dataValue". Other methods could include using jQuery
-        and AJAX to pass data to the transaction processing script
-        or application, but have the browser remain on this page.
--->
-<script type="text/javascript">
-function processTransaction(responseData) {
-    //create the form and attach to the document
-    var transactionForm = document.createElement("form");
-    transactionForm.setAttribute("method", "post");
-    transactionForm.setAttribute("action", "/portal_preview/billing/[% billing.id %]/verify");
-    document.body.appendChild(transactionForm);
-
-    //create form "input" elements corresponding to each parameter
-    dataDesc = document.createElement("input")
-    dataDesc.hidden = true;
-    dataDesc.value = responseData.dataDescriptor;
-    dataDesc.name = "dataDesc";
-    transactionForm.appendChild(dataDesc);
-
-    dataValue = document.createElement("input")
-    dataValue.hidden = true;
-    dataValue.value = responseData.dataValue;
-    dataValue.name = "dataValue";
-    transactionForm.appendChild(dataValue);
-
-    //submit the new form
-    transactionForm.submit();
-}
-</script>
+<script type="text/javascript" src="/content/billing/authorizenet.js"></script>
