--- a/html/pfappserver/root/config/profile/index.tt
+++ b/html/pfappserver/root/config/profile/index.tt
@@ -65,7 +65,9 @@
         <td>[% profile.field('description').value %]</td>
         <td>
           <div class="text-right">
-            [% IF can_access("CONNECTION_PROFILES_DELETE") %]<a class="btn btn-mini btn-danger call-modal" data-modal="deleteProfile" data-modal-content="[% profile_id | html %]"  href="[% c.uri_for(c.controller('Config::Profile').action_for('remove'), [ profile_id ]) %]">[% l('Delete') %]</a>[% END %] <a class="btn btn-mini" href="/portal_preview/captive-portal?PORTAL=[% profile_id %]" target="_blank">[% l('Preview') %]</a>
+            [% IF can_access("CONNECTION_PROFILES_CREATE") %]<a class="btn btn-mini" data-modal="cloneProfile" data-modal-content="[% profile_id | html %]"  href="[% c.pf_hash_for(c.controller('Config::Profile').action_for('clone'), [ profile_id ]) %]">[% l('Clone') %]</a>[% END %]
+            [% IF can_access("CONNECTION_PROFILES_DELETE") %]<a class="btn btn-mini btn-danger call-modal" data-modal="deleteProfile" data-modal-content="[% profile_id | html %]"  href="[% c.uri_for(c.controller('Config::Profile').action_for('remove'), [ profile_id ]) %]">[% l('Delete') %]</a>[% END %] 
+            <a class="btn btn-mini" href="/portal_preview/captive-portal?PORTAL=[% profile_id %]" target="_blank">[% l('Preview') %]</a>
           </div>
         </td>
       </tr>
